Registering and Retrieving Groups works
Signed-off-by: Gabriel Harris-Rouquette <gabizou@me.com>